--- a/Surviland/Assembly-CSharp.csproj
+++ b/Surviland/Assembly-CSharp.csproj
@@ -39,6 +39,7 @@
      <Compile Include="Assets\Scripts\Dialogue\DialogueController.cs" />
      <Compile Include="Assets\Scripts\Dialogue\Dialogue.cs" />
      <Compile Include="Assets\Scripts\Save Game\JsonManager.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2021.1.12f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
